--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <form novalidate ng-submit="search(criteria.q)">
-        <input class="form-control search-bar" type="text" placeholder="Type your search criteria" ng-model="criteria.q">
+<div class="background">
+    <form class="search-bar" novalidate ng-submit="search(criteria.q)">
+        <input class="form-control" type="text" placeholder="Type your search criteria" ng-model="criteria.q">
     </form>
 </div>
