--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,5 +1,5 @@
-<div class="background">
-    <form class="search-bar" novalidate ng-submit="search(criteria.q)">
-        <input class="form-control" type="text" placeholder="Type your search criteria" ng-model="criteria.q">
+<div class="background-home">
+    <form class="hv-center container" novalidate ng-submit="search(criteria.q)">
+        <input class="form-control" type="text" placeholder="What are you fishing for?" ng-model="criteria.q">
     </form>
 </div>
