--- a/src/main/webapp/app/details/consumer.html
+++ b/src/main/webapp/app/details/consumer.html
@@ -1,18 +1,2 @@
-<div>
-    <table>
-        <tbody>
-            <tr>
-                <td><h1>{{fish.nombreComun}}</h1></td>
-                <td><div class="circle ex"></div></td>
-                <td><div class="circle ew"></div></td>
-                <td><div class="circle cr"></div></td>
-                <td><div class="circle en"></div></td>
-                <td><div class="circle vu"></div></td>
-                <td><div class="circle nt"></div></td>
-                <td><div class="circle lc"></div></td>
-                <td><div class="circle na"></div></td>
-            </tr>
-        </tbody>
-    </table>
-    <h2><em>{{fish.nombreCientifico}}</em></h2>
-</div>
+<img class="img-thumbnail" src="content/images/hipster.png" alt="">
+<img class="img-thumbnail" src="content/images/hipster.png" alt="">
