--- a/src/main/webapp/app/details/details.html
+++ b/src/main/webapp/app/details/details.html
@@ -26,7 +26,7 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-        <div class='col-sm-12'>
+        <div class='col-sm-12 well'>
             <div class="col-sm-10">
                 <h1>{{fish.nombreComun}}</h1>
                 <h3><em>{{fish.nombreCientifico}}</em></h3>
@@ -34,7 +34,7 @@
             <div class="col-sm-2">
                 <span class="circle ex"></span>
             </div>
-            <div class="col-sm-12 well">
+            <div class="col-sm-12">
                 <div ui-view></div>
             </div>
         </div>
