--- a/src/main/webapp/app/details/details.html
+++ b/src/main/webapp/app/details/details.html
@@ -32,7 +32,7 @@
                 <h3><em>{{fish.nombreCientifico}}</em></h3>
             </div>
             <div class="col-sm-2">
-                <span class="circle ex"></span>
+                <span class="circle" ng-class="conservationClass"></span>
             </div>
             <div class="col-sm-12">
                 <div ui-view></div>
