--- a/src/main/webapp/app/details/details.html
+++ b/src/main/webapp/app/details/details.html
@@ -38,5 +38,34 @@
                 <div ui-view></div>
             </div>
         </div>
+        <footer>
+            <div class="container">
+                <div class="container">
+                    <div class="row">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12 text-center">
+                                    <div class="footer_logo   wow fadeInUp animated">
+                                        <img src="content/images/logomarviva.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+
+                                <p>&copy; .All Right Reserved By Marviva</p>
+                                <p>With love for everybody.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </footer>
     </div>
 </div>
