--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,6 +61,7 @@
         <script src="bower_components/restangular/dist/restangular.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
         <!-- build:js app/app.js  -->
         <!-- inject:js -->
