--- a/src/main/webapp/app/details/commercial.html
+++ b/src/main/webapp/app/details/commercial.html
@@ -10,13 +10,13 @@
 <tbody>
     <tr>
         <td>Longitud filete</td>
-        <td>{{fish.longitudMinimaFilete}}</td>
-        <td>{{fish.longitudMaximaFilete}}</td>
+        <td>{{fish.longitudMinimaFilete}}g</td>
+        <td>{{fish.longitudMaximaFilete}}g</td>
     </tr>
     <tr>
         <td>Peso filete</td>
-        <td>{{fish.pesoMinimoFilete}}</td>
-        <td>{{fish.pesoMaximoFilete}}</td>
+        <td>{{fish.pesoMinimoFilete}}g</td>
+        <td>{{fish.pesoMaximoFilete}}g</td>
     </tr>
 </tbody>
 </table>
