--- a/src/main/webapp/app/details/nutrition.html
+++ b/src/main/webapp/app/details/nutrition.html
@@ -4,19 +4,19 @@
     <th>Valor</th>
 </thead>
 <tbody>
-    <tr>
+    <tr ng-show="fish.informacionNutricional.proteinas">
         <td>Proteínas</td>
         <td>{{fish.informacionNutricional.proteinas}} g</td>
     </tr>
-    <tr>
+    <tr ng-show="fish.informacionNutricional.carbohidratos">
         <td>Carbohidratos</td>
         <td>{{fish.informacionNutricional.carbohidratos}} g</td>
     </tr>
-    <tr>
+    <tr ng-show="fish.informacionNutricional.calorias">
         <td>Calorías</td>
         <td>{{fish.informacionNutricional.calorias}} kcal</td>
     </tr>
-    <tr>
+    <tr ng-show="fish.informacionNutricional.grasas">
         <td>Grasas</td>
         <td>{{fish.informacionNutricional.grasas}} g</td>
     </tr>
