--- a/src/main/webapp/app/search/search.html
+++ b/src/main/webapp/app/search/search.html
@@ -5,7 +5,7 @@
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                            <img class="media-object thumb" src="content/images/hipster.png" alt="...">
+                            <img class="media-object thumb" ng-src="{{fish.imagenes[0]}}" alt="...">
                         </a>
                     </div>
                     <div class="media-body">
