--- a/src/main/webapp/app/details/commercial.html
+++ b/src/main/webapp/app/details/commercial.html
@@ -10,8 +10,8 @@
 <tbody>
 <!--    <tr>
         <td>Longitud filete</td>
-        <td>{{fish.longitudMinimaFilete}}g</td>
-        <td>{{fish.longitudMaximaFilete}}g</td>
+        <td>{{fish.longitudMinimaFilete}}cm</td>
+        <td>{{fish.longitudMaximaFilete}}cm</td>
     </tr>-->
     <tr>
         <td>Peso filete</td>
