tips compra responsable

--- a/src/main/webapp/app/search/search.html
+++ b/src/main/webapp/app/search/search.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="background-home">
     <div class="hv-center container">
         <ul class="media-list">
             <li ui-sref="details.consumer({id: fish.id})" class="list-group-item" ng-repeat="fish in fishes">
