--- a/src/main/webapp/app/details/report.html
+++ b/src/main/webapp/app/details/report.html
@@ -5,6 +5,6 @@
             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Producto">
         </div>
         <textarea class="form-control" rows="3"></textarea>
-        <a ui-sref="details.confirm({id: fish.id})" class="btn btn-default">Reportar</a>
+        <a ui-sref="details.confirm({id: fish.id})" class="btn btn-primary boton-reporte">Reportar</a>
     </fieldset>
 </form>
