--- a/src/main/webapp/app/details/details.html
+++ b/src/main/webapp/app/details/details.html
@@ -28,12 +28,13 @@
             </div><!-- /.container-fluid -->
         </nav>
         <div class='col-sm-12 well'>
-            <div class="col-sm-10">
+            <div class="col-sm-9">
                 <h1>{{fish.nombreComun}}</h1>
                 <h3><em>{{fish.nombreCientifico}}</em></h3>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                 <span class="circle" ng-class="conservationClass"></span>
+                <a class="btn btn-danger boton-reporte" ui-sref="details.report({id: fish.id})">Denunciar venta irresponsable</a>
             </div>
             <div class="col-sm-12">
                 <div ui-view></div>
