--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,5 +1,6 @@
 <div class="background-home">
     <h4><a ui-sref="tips" class="tips"><span class="glyphicon glyphicon-globe"></span> Tips para compra responsable</a></h4>
+    <h4><a ui-sref="labels" class="tips"><span class="glyphicon glyphicon-list-alt"></span> Normas de rotulación</a></h4>
     <form class="hv-center container" novalidate ng-submit="search(criteria.q)">
         <input class="form-control" type="text" placeholder="What are you fishing for?" ng-model="criteria.q">
     </form>
