--- a/src/main/webapp/app/details/details.html
+++ b/src/main/webapp/app/details/details.html
@@ -18,7 +18,7 @@
                         <li role="presentation" ui-sref-active="active"><a ui-sref="home"><span class="glyphicon glyphicon-home"></span> Inicio</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.consumer({id: fish.id})">Fotos</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.bio({id: fish.id})">Información biológica</a></li>
-                        <li role="presentation" ui-sref-active="active"><a ui-sref="details.commercial({id: fish.id})">Información Comercial</a></li>
+                        <li role="presentation" ui-sref-active="active"><a ui-sref="details.commercial({id: fish.id})">Información comercial</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.nutrition({id: fish.id})">Nutrición</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.economy({id: fish.id})">Economía</a></li>
                         <li ng-if="fish.regulacion.maximoToneladas" role="presentation" ui-sref-active="active"><a ui-sref="details.regulation({id: fish.id})">Regulation</a></li>
