--- a/src/main/webapp/app/home/labels.html
+++ b/src/main/webapp/app/home/labels.html
@@ -12,7 +12,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <p>Teniendo en cuenta lo establecido por el <a href="http://www.icbf.gov.co/cargues/avance/docs/resolucion_minproteccion_5109_2005.htm">decreto 5109 de 2005</a> del ministerio de protección social su , dice:</p>
+                        <p>Teniendo en cuenta lo establecido por el <a href="http://www.icbf.gov.co/cargues/avance/docs/resolucion_minproteccion_5109_2005.htm">decreto 5109 de 2005</a> del ministerio de protección social dice:</p>
                         <p>En la medida que sea aplicable al alimento que ha de ser rotulado; en el rótulo o etiqueta de los alimentos envasados deberá aparecer la siguiente información:</p>
                         <ul>
                             <li>Nombre del alimento</li>
