--- a/src/main/webapp/app/details/commercial.html
+++ b/src/main/webapp/app/details/commercial.html
@@ -1,6 +1,6 @@
-<p>{{fish.caracteristicasFilete}}</p>
-<p>{{fishcoloracion}}</p>
-<p>{{fish.olor}}</p>
+<p><strong>Características:</strong> {{fish.caracteristicasFilete}}</p>
+<p><strong>Coloracion:</strong>  {{fishcoloracion}}</p>
+<p><strong>Olor:</strong> {{fish.olor}}</p>
 <table class="table">
     <thead>
         <tr>
