--- a/src/main/webapp/app/details/details.html
+++ b/src/main/webapp/app/details/details.html
@@ -21,7 +21,7 @@
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.commercial({id: fish.id})">Información comercial</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.nutrition({id: fish.id})">Nutrición</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.economy({id: fish.id})">Economía</a></li>
-                        <li ng-if="fish.regulacion.maximoToneladas" role="presentation" ui-sref-active="active"><a ui-sref="details.regulation({id: fish.id})">Regulation</a></li>
+                        <li ng-if="fish.regulacion.maximoToneladas" role="presentation" ui-sref-active="active"><a ui-sref="details.regulation({id: fish.id})">Regulación</a></li>
                         <li role="presentation" ui-sref-active="active"><a ui-sref="details.report({id: fish.id})">Reportar</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -61,8 +61,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
 
-                                <p>&copy; .All Right Reserved By Marviva</p>
-                                <p>With love for everybody.</p>
+                                <p>With love for the Fishackathon. 2016.</p>
 
                             </div>
                         </div>
