--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -2,6 +2,6 @@
     <h4><a ui-sref="tips" class="tips"><span class="glyphicon glyphicon-globe"></span> Tips para compra responsable</a></h4>
     <h4><a ui-sref="labels" class="tips"><span class="glyphicon glyphicon-list-alt"></span> Normas de rotulación</a></h4>
     <form class="hv-center container" novalidate ng-submit="search(criteria.q)">
-        <input class="form-control" type="text" placeholder="What are you fishing for?" ng-model="criteria.q">
+        <input class="form-control" type="text" placeholder="Qué estás pescando?" ng-model="criteria.q">
     </form>
 </div>
